--- a/libs/template/template-v1.jade
+++ b/libs/template/template-v1.jade
@@ -75,6 +75,8 @@ html
 								li
 									a(href="") Debt and money
 								li
+									a(href="") Consumer
+								li
 									a(href="") Relationship
 								li
 									a(href="") Housing
@@ -93,25 +95,21 @@ html
 							a Get Involved
 							ul.submenu(style="display:none;")
 								li
-									a(href="") Benefits
+									a(href="") About Citizens Advice
 								li
-									a(href="") Work
+									a(href="") How we provide advice
 								li
-									a(href="") Debt and money
+									a(href="") Contact us
 								li
-									a(href="") Relationship
+									a(href="") The difference we make
 								li
-									a(href="") Housing
+									a(href="") Support us
 								li
-									a(href="") Law and rights
+									a(href="") Policy research
 								li
-									a(href="") Discrimination
+									a(href="") Campaigns
 								li
-									a(href="") Tax
-								li
-									a(href="") Healthcare
-								li
-									a(href="") Education
+									a(href="") How Citizens Advice works
 
 					.search
 						.field-group.field-group--buttons
@@ -120,7 +118,60 @@ html
 							button.btn.btn-primary
 								i.icon-search
 
-					.burger Menu
+					.burger
+						span Menu
+						.mobile-submenu(style="display:none")
+							.mobile-nav
+								ul
+									li.title Get Advice
+									li
+										a(href="") Benefits
+									li
+										a(href="") Work
+									li
+										a(href="") Debt and money
+									li
+										a(href="") Consumer
+									li
+										a(href="") Relationship
+									li
+										a(href="") Housing
+									li
+										a(href="") Law and rights
+									li
+										a(href="") Discrimination
+									li
+										a(href="") Tax
+									li
+										a(href="") Healthcare
+									li
+										a(href="") Education
+
+								ul
+									li.title Get Involved
+									li
+										a(href="") About Citizens Advice
+									li
+										a(href="") How we provide advice
+									li
+										a(href="") Contact us
+									li
+										a(href="") The difference we make
+									li
+										a(href="") Support us
+									li
+										a(href="") Policy research
+									li
+										a(href="") Campaigns
+									li
+										a(href="") How Citizens Advice works
+
+							.mobile-search
+								.field-group.field-group--buttons
+									input(type="search", placeholder="Search")
+									div(style="display:table-cell;")
+									button.btn.btn-primary
+										i.icon-search
 
 			//nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
 				ul.nav-list-primary
