Removed background colour and added bottom border

--- a/libs/modules/breadcrumb.less
+++ b/libs/modules/breadcrumb.less
@@ -9,7 +9,7 @@
     padding: 0;
     clear: left;
     // Hack as we have Bootstrap in the mix
-    background-color: @heritage-blue-lightest;
+    //background-color: @heritage-blue-lightest;
     padding: 0;
     max-width: none;
     width: @full-page-width;
@@ -25,6 +25,7 @@
     background-color: transparent;
     padding: @box-spacing-vertical/2 @box-spacing-horizontal;
     max-width: @breakpoint-lg;
+    border-bottom: #eeeeee 1px solid;
     //overflow: scroll;
 }
 
