--- a/libs/modules/main-nav-v1.less
+++ b/libs/modules/main-nav-v1.less
@@ -27,7 +27,7 @@
 }
 
 #main-nav-1--nav {
-    background-color: @heritage-blue-lighter;
+    background-color: @heritage-yellow-lighter;
     .content {
         max-width: @breakpoint-lg;
         padding: 0 1rem;
@@ -69,7 +69,7 @@
                 //background-color: @white;
                 position: relative;
                 &:hover {
-                    background-color: @heritage-blue-lighter;
+                    background-color: @heritage-yellow-lighter;
                     //@include transition(background, 0.2s);
                     //cursor: pointer;
                 }
@@ -95,8 +95,8 @@
                 &.active a {
                     border-radius: 2px 2px 0 0;
                     //border-bottom: .25rem solid white;
-                    box-shadow: 0px 4px 0px 0px @gray-8;
-                    background-color: @gray-8;
+                    box-shadow: 0px 4px 0px 0px @heritage-blue-lightest;
+                    background-color: @heritage-blue-lightest;
                 }
             }
         }
@@ -129,13 +129,14 @@
             left: 0;
             top: 2.5rem;
             z-index: 1;
-            background-color: @gray-8;
+            background-color: @heritage-blue-lightest;
             padding: @box-spacing-vertical/1.2 @box-spacing-horizontal/2;
             border-radius: 0 2px 2px 2px;
             margin: 0;
             width: 40vw;
             column-count: 2;
             column-gap: 4rem;
+            box-shadow: 2px 2px 2px 0px rgba(0,0,0,0.1);
             li {
                 break-inside: avoid-column;
                 text-align: left;
