style changes and added card to sidebar

--- a/libs/jade/content-v1.jade
+++ b/libs/jade/content-v1.jade
@@ -24,9 +24,17 @@ block sidebar
         {title: "Preparing for your PIP assessment"},
         {title: "Changes that affect your PIP"}
         ],0)
-//    - var section = "Sibling categories"
-//    +sidebar([
-//        ])
+
+    .cards.side-nav-beta(style="color:#fff; background-color:#006278;")
+        .card-banner-top(style="background-color:#006278;")
+            p(style="color:#fff;") Campaigns
+
+        .card-image-top
+            img(src="images/mother_with_children.jpg" alt="Mother with two daughters")
+
+        .card-text
+            p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+            button.btn.btn-primary.right-button-icon(type="button") Continue
 
 block script
     script.
