--- a/libs/jade/content-v2.jade
+++ b/libs/jade/content-v2.jade
@@ -25,6 +25,18 @@ block sidebar
         {title: "Changes that affect your PIP"}
         ],0)
 
+    .cards.side-nav-beta(style="color:#fff; background-color:#006278;")
+        .card-banner-top(style="background-color:#006278;")
+            p(style="color:#fff;") Campaigns
+
+        .card-image-top
+            img(src="images/mother_with_children.jpg" alt="Mother with two daughters")
+
+        .card-text
+            p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+            button.btn.btn-primary.right-button-icon(type="button") Continue
+
+
 block section-notice
     aside.section-notice--dev
         h2.screenreader Notice
