--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -69,7 +69,8 @@
 					//height: 100%;
 					border: none;
 					display: inline-block;
-					line-height: 3.25em;
+					line-height: 3.25rem;
+					font-size: 1.2em;
 					&:hover {
 						background-color: @heritage-yellow-lighter;
 						color: @heritage-blue;
