--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -69,7 +69,7 @@
 					//height: 100%;
 					border: none;
 					display: inline-block;
-					line-height: 3.25rem;
+					line-height: 3.4rem;
 					font-size: 1.2em;
 					&:hover {
 						background-color: @heritage-yellow-lighter;
@@ -108,13 +108,17 @@
 				//border-bottom: 1px solid white;
 			}
 			input {
-				border: none;
 				width: 250px;
+				border: none;
 				padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
 			}
 			button {
 				border: none;
 				padding: @box-spacing-vertical/2 @box-spacing-horizontal;
+			}
+			input,
+			button {
+				border: 1px solid @white;
 			}
 			@media screen and (max-width: @screen-xs-max) {
 		        display: block;
@@ -122,7 +126,6 @@
 		        input,
 		        button {
 		        	width: 100%;
-
 		        	margin: 0;
 		        	padding: 0.75rem 1rem;
 		        	border-radius: 0;
