--- a/libs/template/template-v1.jade
+++ b/libs/template/template-v1.jade
@@ -115,7 +115,7 @@ html
 						.field-group.field-group--buttons
 							input(type="search", placeholder="Search")
 							div(style="display:table-cell;")
-							button.btn.btn-primary
+							button.btn.btn-yellow
 								i.icon-search
 
 					.burger
