--- a/libs/modules/main-nav-v1.less
+++ b/libs/modules/main-nav-v1.less
@@ -28,7 +28,7 @@
 }
 
 #main-nav-1--nav {
-    background-color: @heritage-yellow-lighter;
+    background-color: @heritage-blue-lighter;
     .content {
         max-width: @breakpoint-lg;
         padding: 0 1rem;
@@ -76,7 +76,7 @@
                 }
                 > a {
                     background-color: @white;
-                    padding: @box-spacing-vertical/1.2 @box-spacing-horizontal/2;
+                    padding: 0.675rem @box-spacing-horizontal/2;
                     border-radius: 2px;
                     color: @heritage-blue;
                     //height: 100%;
@@ -96,7 +96,7 @@
                 &.active a {
                     border-radius: 2px 2px 0 0;
                     //border-bottom: .25rem solid white;
-                    box-shadow: 0px 4px 0px 0px @heritage-blue-lightest;
+                    box-shadow: 0px 12px 0px 0px @heritage-blue-lightest;
                     background-color: @heritage-blue-lightest;
                 }
             }
@@ -106,7 +106,7 @@
             vertical-align: middle;
             //float: right;
             input {
-                border: none;
+                border-color: @white;
                 width: 100%;
                 padding: @box-spacing-vertical/2 @box-spacing-horizontal/2;
             }
@@ -128,7 +128,7 @@
         .submenu {
             position: absolute;
             left: 0;
-            top: 2.5rem;
+            top: 2.8rem;
             z-index: 1;
             background-color: @heritage-blue-lightest;
             padding: @box-spacing-vertical/1.2 @box-spacing-horizontal/2;
@@ -141,7 +141,8 @@
             li {
                 break-inside: avoid-column;
                 text-align: left;
-                padding: .25rem .5rem;
+                padding: .5rem;
+                margin: 0;
                 a {
                     border: none;
                 }
@@ -224,4 +225,12 @@
             }
         }
     }
+}
+
+.btn-yellow {
+        border: 1px solid @white !important;
+    .btn(
+        @btn-background: @heritage-yellow,
+        @btn-background-hover: @heritage-yellow-darker
+    );
 }
