--- a/libs/modules/main-nav-v2.less
+++ b/libs/modules/main-nav-v2.less
@@ -129,6 +129,9 @@
 		        	margin: 0;
 		        	padding: 0.75rem 1rem;
 		        	border-radius: 0;
+		        	border-width: 0;
+		        	border-top-width: 1px;
+		        	border-bottom-width: 1px;
 		        }
 		    }
 		}
