--- a/libs/template/template-v1.jade
+++ b/libs/template/template-v1.jade
@@ -170,7 +170,7 @@ html
 								.field-group.field-group--buttons
 									input(type="search", placeholder="Search")
 									div(style="display:table-cell;")
-									button.btn.btn-primary
+									button.btn.btn-yellow
 										i.icon-search
 
 			//nav.main-nav(data-track-zone="main-nav", style="overflow: visible;")
