--- a/libs/modules/main-nav-v1.less
+++ b/libs/modules/main-nav-v1.less
@@ -90,14 +90,14 @@
                         padding: 0 0 0 @box-spacing-horizontal/2;
                         .icon;
                         font-size: @font-size-small;
-
                     }
                 }
                 &.active a {
                     border-radius: 2px 2px 0 0;
                     //border-bottom: .25rem solid white;
-                    box-shadow: 0px 12px 0px 0px @heritage-blue-lightest;
-                    background-color: @heritage-blue-lightest;
+                    box-shadow: 0px 12px 0px 0px @heritage-blue;
+                    background-color: @heritage-blue;
+                    color: @white;
                 }
             }
         }
@@ -130,7 +130,8 @@
             left: 0;
             top: 2.8rem;
             z-index: 1;
-            background-color: @heritage-blue-lightest;
+            background-color: @heritage-blue;
+            color: @white;
             padding: @box-spacing-vertical/1.2 @box-spacing-horizontal/2;
             border-radius: 0 2px 2px 2px;
             margin: 0;
@@ -174,8 +175,8 @@
                 left: 0;
                 top: 6.625rem;
                 z-index: 1;
-                background-color: @heritage-yellow-lighter;
-                box-shadow: 0 2px 2px 0px rgba(0,0,0,0.1);
+                background-color: @heritage-blue-lighter;
+                box-shadow: 0 2px 2px 0px rgba(0,0,0,0.2);
                 ul {
                     display: inline-block;
                     width: 50%;
