--- a/libs/jade/content-v2.jade
+++ b/libs/jade/content-v2.jade
@@ -25,7 +25,18 @@ block sidebar
         {title: "Changes that affect your PIP"}
         ],0)
 
-    .cards.side-nav-beta(style="color:#fff; background-color:#006278;")
+
+    .cards.side-nav-beta(style="color:#fff; background-color:#32457E;")
+        .card-banner-top
+            p(style="color:#fff;") Policy
+        .card-image-top
+            img(src="images/laptop-branding.png" alt="Laptop")
+        .card-text
+            p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
+            button.btn.btn-primary.right-button-icon(type="button" style="background-color:#FFBF47; border-color:#FFBF47;") Continue
+
+
+    //.cards.side-nav-beta(style="color:#fff; background-color:#006278;")
         .card-banner-top(style="background-color:#006278;")
             p(style="color:#fff;") Campaigns
 
@@ -36,7 +47,10 @@ block sidebar
             p Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh.
             button.btn.btn-primary.right-button-icon(type="button") Continue
 
-
+    .speech-lines.side-nav-beta
+        h3 An example of a quote in a report when the speech line should be used instead of the speech bubble
+        p Quote from William Shakespear 1690
+        .box-speech-line
 block section-notice
     aside.section-notice--dev
         h2.screenreader Notice
