--- a/libs/jade/adviser-content.jade
+++ b/libs/jade/adviser-content.jade
@@ -17,13 +17,13 @@ block breadcrumbs
 block sidebar
     - var section = "Before you claim PIP"
     +sidebar([
-        {title: "How to fill in your PIP claim form"},
-        {title: "How to claim PIP", class: "adviser"},
+        {title: "How to fill in your PIP claim form", class: "adviser-only"},
+        {title: "How to claim PIP"},
         {title: "How to claim PIP if you have a terminal illness"},
-        {title: "How to fill in your claim form"},
-        {title: "Getting evidence to support your PIP claim"},
-        {title: "Preparing for your PIP assessment"},
-        {title: "Changes that affect your PIP"}
+        {title: "How to fill in your claim form", class: "adviser-only"},
+        {title: "Getting evidence to support your PIP claim", class: "adviser-only"},
+        {title: "Preparing for your PIP assessment", class: "adviser-only"},
+        {title: "Changes that affect your PIP", class: "adviser-only"}
         ],0)
 
     //nav.side-nav-beta.adviser-nav
@@ -61,6 +61,17 @@ block script-bottom
 block content
     .articleContent
         div
+            .collapse.collapsible--adviser
+                .collapse-toggle I want to apply by phone
+                .collapse-content
+                    p PIP claim line
+                    p Telephone 0800 917 2222
+                    p Textphone 0800 917 7777
+                    p Open Monday to Friday, 8am to 6pm
+                    p Calls are free from landlines and from mobiles.
+                    p It should take about 20 minutes to complete the call. If you’d prefer someone else to call for you that’s fine, but you need to be with them so that you can give permission for them to speak for you.
+                    a.collapse-toggle-close Close
+
             p Making a claim for the benefit Personal Independence Payment (PIP) can take a long time time. It can often take up to 4 months from starting the application to getting your money (if you’re #[a(href="#") terminally ill] your claim will be processed more quickly).
 
             p If you’re #[a(href="#") moving from DLA to PIP] your payments won’t stop while you’re waiting for your PIP claim to be processed, as long as you make your claim for PIP within a month of being told by the DWP that you should.
@@ -103,7 +114,7 @@ block content
             ul
                 li your full name, address and phone number
                 li your national insurance number
-                li your bank or building society account details so payments can be made if PIP is awarded
+                li.adviser your bank or building society account details so payments can be made if PIP is awarded
                 li contact details of your GP or other health professionals you deal with
                 li the dates and details of any stays in hospital or residential care
                 li your nationality or immigration status
@@ -115,7 +126,7 @@ block content
                 .collapse-content
                     p PIP claim line
                     p Telephone 0800 917 2222
-                    p Textphone 0800 917 7777
+                    p.adviser Textphone 0800 917 7777
                     p Open Monday to Friday, 8am to 6pm
                     p Calls are free from landlines and from mobiles.
                     p It should take about 20 minutes to complete the call. If you’d prefer someone else to call for you that’s fine, but you need to be with them so that you can give permission for them to speak for you.
@@ -124,6 +135,102 @@ block content
             .collapse.collapsible
                 .collapse-toggle I want to apply by post
                 .collapse-content
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
+                    p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
+                    p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
+                    p Personal Independence Payment New Claims
+                    p Post Handling Site B
+                    p Wolverhampton
+                    p WV99 1AH
                     p It’s quicker to apply by phone, but If that isn’t possible you can write to the DWP and ask for a PIP1 form.
                     p You’ll need to tell them why you (or someone else) can’t do the PIP1 form over the phone.
                     p Personal Independence Payment New Claims
