Search results with adviser content

--- a/libs/guide.less
+++ b/libs/guide.less
@@ -99,6 +99,11 @@ ol li, ul li {
     margin-left: 0.25rem;
     color: #A5BDDC;
 }
+.search-adviser {
+    padding: 0rem .8rem;
+    border: 1px solid @inventive-teal-lighter;
+    border-radius: @form-border-radius;
+}
 
 /***************************************************************************
 * Box links
