--- a/libs/jade/search-results.jade
+++ b/libs/jade/search-results.jade
@@ -55,6 +55,30 @@ block content
 							i.icon-guillemet-right(aria-hidden='true')
 							a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/") Sick or disabled people and carers
 					
+			li.search-results__item.search-adviser
+				h3.search-results__heading.adviser 
+					a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/employment-and-support-allowance/") Employment and Support Allowance (ESA)
+				p Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision. 
+				p.search-results__section
+					.search-breadcrumb
+						span.search-breadcrumb__item
+							a(href="https://www.citizensadvice.org.uk/benefits/") Benefits                  
+						span.search-breadcrumb__item
+							i.icon-guillemet-right(aria-hidden='true')
+							a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/") Sick or disabled people and carers
+					
+			li.search-results__item
+				h3.search-results__heading 
+					a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/employment-and-support-allowance/") Employment and Support Allowance (ESA)
+				p Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision. 
+				p.search-results__section
+					.search-breadcrumb
+						span.search-breadcrumb__item
+							a(href="https://www.citizensadvice.org.uk/benefits/") Benefits                  
+						span.search-breadcrumb__item
+							i.icon-guillemet-right(aria-hidden='true')
+							a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/") Sick or disabled people and carers
+					
 		.pagination
 			ul
 				li.active 
