Search results adviser listing

--- a/libs/jade/search-results.jade
+++ b/libs/jade/search-results.jade
@@ -29,9 +29,9 @@ block breadcrumbs
 //        ])
 
 block section-notice
-	aside.section-notice
+	aside.section-notice--dev
 		h2.screenreader Notice
-		.section-notice__content
+		.section-notice--dev__content
 			p #[span.badge NEW] This page is part of #[a(href="#") our new approach to digital advice].
 
 block content
@@ -56,7 +56,7 @@ block content
 							a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/") Sick or disabled people and carers
 					
 			li.search-results__item.search-adviser
-				h3.search-results__heading.adviser 
+				h3.search-results__heading.adviser-search-title 
 					a(href="https://www.citizensadvice.org.uk/benefits/sick-or-disabled-people-and-carers/employment-and-support-allowance/") Employment and Support Allowance (ESA)
 				p Information on how to claim Employment and Support Allowance including eligibility, filling in the ESA1 and ESA50 forms and challenging an ESA decision. 
 				p.search-results__section
