--- a/libs/modules/adviser.less
+++ b/libs/modules/adviser.less
@@ -27,6 +27,24 @@ span[id*="overlay_button"] {
     }
 }
 
+.adviser-search-title {
+    //background-color: @inventive-teal-lightest;
+    padding: 0;
+    &:before {
+        content: "A";
+        display: inline-block;
+        background-color: @inventive-teal;
+        color: @white;
+        width: 1.7rem;
+        text-align: center;
+        margin-left: .5rem;
+        font-weight: @font-weight-base;
+        float: right;
+        //font-weight: @font-weight-bolder;
+        //border-radius: 1px;
+    }
+}
+
 .adviser-only {
     padding-right: 2.7rem !important;
     //border-right: 4px solid @inventive-teal;
