Amend section index to include adviser lijnk

--- a/libs/jade/section-index-dev.jade
+++ b/libs/jade/section-index-dev.jade
@@ -39,7 +39,7 @@ block content
 					.beta-index-page__section.col-sm-12
 						h2 Changing your mind about a purchase
 						ul.li--no-style
-							li
+							li.adviser
 								a(href="#") If you were pressured into buying something you didn’t want
 							li
 								a(href="#") Cancel something being paid for on hire-purchase 
@@ -71,7 +71,7 @@ block content
 								a(href="#") Report fake or counterfeit goods
 							li
 								a(href="#") If you think you've bought stolen goods
-							li
+							li.adviser
 								a(href="#") Report to Trading Standards
 
 				.beta-index-page__box.col-md-12.col-sm-12 
