Added type changes

--- a/libs/template/toolbar.jade
+++ b/libs/template/toolbar.jade
@@ -1,7 +1,7 @@
 .title__subheading
-	| This advice is for 
+	| This advice applies to
 	button#showSimpleModal.btn.btn-primary-outline.btn-small(type="button") England
-	a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Email
+	a.a-social-email(href="javascript:emailCurrentPage()", data-track="Email page") Send this advice
 	a.a-social-print(href="javascript:window.print();", data-track="Print") Print
 	if toolbarsadviser
 		a.a-social-references(href="#!", data-track="References") References
