Fixed mixin.jade warning

--- a/libs/jade/adviser-content.jade
+++ b/libs/jade/adviser-content.jade
@@ -17,13 +17,13 @@ block breadcrumbs
 block sidebar
     - var section = "Before you claim PIP"
     +sidebar([
-        {title: "How to fill in your PIP claim form", class: "adviser-only"},
+        {title: "How to fill in your PIP claim form", css: "adviser-only"},
         {title: "How to claim PIP"},
         {title: "How to claim PIP if you have a terminal illness"},
-        {title: "How to fill in your claim form", class: "adviser-only"},
-        {title: "Getting evidence to support your PIP claim", class: "adviser-only"},
-        {title: "Preparing for your PIP assessment", class: "adviser-only"},
-        {title: "Changes that affect your PIP", class: "adviser-only"}
+        {title: "How to fill in your claim form", css: "adviser-only"},
+        {title: "Getting evidence to support your PIP claim", css: "adviser-only"},
+        {title: "Preparing for your PIP assessment", css: "adviser-only"},
+        {title: "Changes that affect your PIP", css: "adviser-only"}
         ],0)
 
     //nav.side-nav-beta.adviser-nav
