Fixed bug causing close buttons to be unstyled

--- a/libs/mixins/revealable.less
+++ b/libs/mixins/revealable.less
@@ -31,7 +31,7 @@
         }
     }
 
-    .collapse-toggle-close
+    .collapse-toggle-close,
     .revealable__close {
         color: @revealable-heading;
         &:hover {
