--- a/libs/jade/principles.jade
+++ b/libs/jade/principles.jade
@@ -1,48 +1,90 @@
 block settings
-	- var title = "Design Principles"
+	- var title = "Digital principles"
 
 extends ../template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
 		{title: "Home", href: "index.html"}, 
-		{title: "Design Principles"}])
+		{title: "Digital principles"}])
 
 block content
 	.articleContent.row
 		.span8
-			p.u-lede These design principles are rooted in our #[a(href="#") advice proposition] by referring back to them and developing from them, along with our #[a(href="#") content style guide] we will create a consistent and valuable digital advice service. 
-			nav
-				h3 On this page
-					ol
-						li
-							a(href="#principle1") Design for users needs
-						li
-							a(href="#principle2") Design for inclusion
-						li
-							a(href="#principle3") Design for common case (happy path)
-						li
-							a(href="#principle4") Help people solve a problem (do the hard work)
-						li
-							a(href="#principle5") Be honest
-						li
-							a(href="#principle6") Design should be minimal/unobtrusive
-							br
-							| let people access the information as easily as possible
-						li
-							a(href="#principle7") Iterate based on data and feedback (not assumptions)
+			p.u-lede These principles are a benchmark for everything the digital team does, and the way we work. They also guide what’s in and what’s out of scope.
+			p They're both aspirational and achievable. We might not get them perfectly right every time, but they’re what we should be striving towards no matter what we’re working on.
+			p The principles interact with each other at all stages of our work.
 
-			h2#principle1 Design for users needs
-			p Designing for user needs is the first and most important design principle. People use our service to solve real life problems, start by capturing problems.
-			h2#principle2 Design for inclusion
-			p Inclusion of our two main audiences, clients and advisers, also users of varying abilities and of differing devices.
-			h2#principle3 Design for common case (happy path)
-			p It’s important to remember we can’t solve all problems online, and as we see from data, most clients have multiple problems. If we can solve the most common cases online or through digital assistance then we can free adviser time to tackle the most complex issues.
-			h2#principle4 Help people solve a problem (do the hard work)
-			p We are not wikipedia, we are not the government. Our job is to help people through the best way to problem resolution. We don’t need to explain what a benefit is, users searching will already know or will find other places that information is explained. Where possible help and show and where necessary, direct.
-			h2#principle5 Be honest
-			p Be honest, always. If a problem is going to take a long time say so. If we are trying new ways of advising say so, ask for feedback, encourage engagement.
-			h2#principle6 Design should be minimal/unobtrusive
-			p Don’t get in the way, many visitors are in serious situations or difficult circumstances. Design should be used to explain or direct, it needs to be clear, simple, useful and practical not decorative or distracting.
-			h2#principle7 Iterate based on data and feedback (not assumptions)
-			p Design is continuous. Be agile, review, iterate, improve.
+			h2#principle1 Start with people’s needs
+			ul
+				li everything we do is based on people’s needs
+				li needs come from real people - online users, clients and advisers, not the organisation or policy 
+				li our audience’s needs are based on problems, eg ‘as someone who suspects they’ve been trafficked, I need to get help so I can get out of my situation’
+				li needs are collected through research and data
+				li we don’t assume anything - the digital team isn’t the audience, and doesn’t try to be
+
+			h2#principle2 Design with data and research 
+			ul
+				li every decision should be informed by research, eg content, CMS development, design, usability
+				li use resources like Google Analytics, Google Trends, SEMrush, Petra - these are your ports of call when making decisions
+				li do as much research as possible - with real people who’d be using whatever you’re working on
+				li try not to assume - question everything
+				li only the people who use our products know best
+				li we iterate with data and research too (it’s not just a big bang)
+			h2#principle3 Help people solve problems 
+			ul
+				li identify problems through research and solve them with advice
+				li don’t just give information or explain the law without solving problems
+				li make content active and actionable 
+				li we define how we meet needs with ‘acceptance criteria’ - a set list of criteria which explain what it takes for us to solve people’s problems
+				li make our solutions easy to find, externally and internally 
+			h2#principle4 Collaborate with the whole Citizens Advice service 
+			ul
+				li within the digital team: content designers, designers, researchers, developers, delivery managers, data scientists
+				li but also outside the team: policy experts, SMEs, campaigners, news team and advisers 
+				li use Slack to get the team’s opinion on a problem, no matter how small
+				li everyone can contribute to the conversation 
+				li don’t struggle alone - there’s a group of smart and humble people around you, ready and willing to pitch in (and you can return the favour one day)
+				li understand the importance of the role that we have in the service
+			h2#principle5 Give practical and tactical advice 
+			ul
+				li this is where we add value
+				li give the online audience the advice that no one else is saying 
+				li we find the best tactics by learning from advisers, subject matter experts and by doing our own research
+				li we can really push the boundaries - and replicate what CAB has been doing for years in a different space 
+			h2#principle6 Understand the different audiences 
+			ul
+				li know online audience needs and adviser needs 
+				li sometimes you can meet the needs of both at once
+				li sometimes you’ll have to only design only for advisers, or only for the public
+				li know where this line is, and when you have to write separate pieces
+				li this is achieved through research
+				li different subject areas have different audiences
+			h2#principle7 Use one voice
+			ul
+				li our tone of voice and style needs to be consistent across the organisation
+				li the same consistency applies to our tools, the branding and the design
+				li within our team the style guide and 2i people are the guides for this 
+				li be consistent not uniform - there will be exceptions to the rules but they need to be discussed and justified, preferably with research 
+				li test the style regularly 
+				li think about accessibility not as a bolt-on, but as an integral part of the design process
+				li if we’re going to extend this beyond our team, we’re going to need change management
+			h2#principle8 Share early, fail fast, fail often and then improve
+			ul
+				li don’t spend too long on something without a second opinion or a crit
+				li do small pieces of work that can be iterated
+				li work quickly to get something out to a content crit - don’t strive for perfection 
+				li once you’ve worked on something for a few weeks, your eyes are no longer fresh - you can always benefit from a fresh pair of eyes (and regularly) 
+				li build quick prototypes of tools that can be tested as soon as possible 
+				li test your content and the language you’re using with your audience as soon as you can
+				li aim for a minimum viable product, then fill the gaps
+				li as we’ve already said, don’t struggle alone - keep sharing
+				li failure is not a weakness - it’s part of the process
+				li you can improve things easily by working with the rest of the team, eg crits
+			h2#principle9 Keep making it better
+			ul
+				li be prepared to publish content that isn’t perfect, because content is never finished
+				li content will never be perfect, but we make the best decisions we can with the data we have
+				li monitor your live content and iterate based on data 
+				li retrospective prime directive: “Regardless of what we discover, we understand and truly believe that everyone did the best job they could, given what they knew at the time, their skills and abilities, the resources available, and the situation at hand
+				li it’s our job to keep learning and never stop 
