--- a/libs/jade/index.jade
+++ b/libs/jade/index.jade
@@ -12,10 +12,10 @@ block content
 
 		.row
 			.span12
-				h2#principles Design principles
+				h2#principles Digital principles
 				ul
 					li
-						a(href="principles.html") Design principles
+						a(href="principles.html") Digital principles
 		.row
 			.span4
 				h2#styles Styles
