--- a/libs/jade/section-index-dev.jade
+++ b/libs/jade/section-index-dev.jade
@@ -1,14 +1,22 @@
 block settings
 	- var title = "Consumer"
 	- var mockup = true
+	- var sidebar = true
 
 extends ../template/template.jade
 
 block breadcrumbs
 	+breadcrumbs([
-		{title: "Home", href: "index.html"}, 
+		{title: "Home", href: "index.html"},
 		{title: "Templates", href: "index.html#templates"},
 		{title: "Consumer"}])
+
+block sidebar
+	.side-nav-beta
+		.cards
+			.card-text(style="background-color:#FFEBC6;")
+				h3 Consumer helpline
+				p Contact the Citizens Advice consumer helpline on #[strong 03454 04 05 06] if you need help - a trained adviser can give you advice over the phone.
 
 block section-notice
 	aside.section-notice--dev
@@ -21,105 +29,92 @@ block section-notice
 block content
 	.articleContent
 		.row
-			.span8
-				p Find out about the #[a(href="https://www.citizensadvice.org.uk/about-us/how-citizens-advice-works/citizens-advice-consumer-work/the-consumer-rights-act-2015/" target="_blank") Consumer Rights Act 2015] and what's changed.
-			.span8
-				.beta-index-page__box.col-md-12.col-sm-12
-					.beta-index-page__section.col-md-12.col-sm-12
-						h2 Cars and vehicles
-						ul.li--no-style
-							li
-								a(href="#") Buying a used car
-							li
-								a(href="#") Problem with a used car
-							li
-								a(href="#") Problem with a car repair
+			p Find out about the #[a(href="https://www.citizensadvice.org.uk/about-us/how-citizens-advice-works/citizens-advice-consumer-work/the-consumer-rights-act-2015/" target="_blank") Consumer Rights Act 2015] and what's changed.
 
-				.beta-index-page__box.col-md-12.col-sm-12 
-					.beta-index-page__section.col-sm-12
-						h2 Changing your mind about a purchase
-						ul.li--no-style
-							li.adviser
-								a(href="#") If you were pressured into buying something you didn’t want
-							li
-								a(href="#") Cancel something being paid for on hire-purchase 
-							li
-								a(href="#") Cancel a contract, membership or subscription
-							li
-								a(href="#") Changing your mind about something you've bought   
+			.beta-index-page__box
+				h2 Cars and vehicles
+				ul.li--no-style
+					li
+						a(href="#") Buying a used car
+					li
+						a(href="#") Problem with a used car
+					li
+						a(href="#") Problem with a car repair
 
-				.beta-index-page__box.col-md-12.col-sm-12
-					.beta-index-page__section.col-sm-12
-						h2 Problems with purchases
-						ul.li--no-style
-							li
-								a(href="#") Belongings left with a trader have been lost or damaged
-							li
-								a(href="#") Claim under a warranty or guarantee 
-							li
-								a(href="#") Claim compensation if something you bought causes damage or distress
-							li
-								a(href="#") Problems with delivery
-							li
-								a(href="#") Return faulty goods
+			.beta-index-page__box
+				h2 Changing your mind about a purchase
+				ul.li--no-style
+					li.adviser
+						a(href="#") If you were pressured into buying something you didn’t want
+					li
+						a(href="#") Cancel something being paid for on hire-purchase
+					li
+						a(href="#") Cancel a contract, membership or subscription
+					li
+						a(href="#") Changing your mind about something you've bought
 
-				.beta-index-page__box.col-md-12.col-sm-12
-					.beta-index-page__section.col-sm-12
-						h2 Scams, counterfeits and stolen goods
-						ul.li--no-style
-							li
-								a(href="#") Report fake or counterfeit goods
-							li
-								a(href="#") If you think you've bought stolen goods
-							li.adviser
-								a(href="#") Report to Trading Standards
+			.beta-index-page__box
+				h2 Problems with purchases
+				ul.li--no-style
+					li
+						a(href="#") Belongings left with a trader have been lost or damaged
+					li
+						a(href="#") Claim under a warranty or guarantee
+					li
+						a(href="#") Claim compensation if something you bought causes damage or distress
+					li
+						a(href="#") Problems with delivery
+					li
+						a(href="#") Return faulty goods
 
-				.beta-index-page__box.col-md-12.col-sm-12 
-					.beta-index-page__section.col-sm-12
-						h2 Problems with phone, internet, downloads or TV
-						ul.li--no-style
-							li
-								a(href="#") Switch broadband, phone or TV provider
-							li
-								a(href="#") Stop getting nuisance calls and texts
-							li
-								a(href="#") Disputing a phone, internet or TV bill
-							li
-								a(href="#") Problem with an app, software or download
+			.beta-index-page__box
+				h2 Scams, counterfeits and stolen goods
+				ul.li--no-style
+					li
+						a(href="#") Report fake or counterfeit goods
+					li
+						a(href="#") If you think you've bought stolen goods
+					li.adviser
+						a(href="#") Report to Trading Standards
 
-				.beta-index-page__box.col-md-12.col-sm-12 
-					.beta-index-page__section.col-sm-12
-						h2 Getting home improvements done
-						ul.li--no-style
-							li
-								a(href="#") Before you get building work done
-							li
-								a(href="#") Problem with building work, decorating or home improvements
+			.beta-index-page__box
+				h2 Problems with phone, internet, downloads or TV
+				ul.li--no-style
+					li
+						a(href="#") Switch broadband, phone or TV provider
+					li
+						a(href="#") Stop getting nuisance calls and texts
+					li
+						a(href="#") Disputing a phone, internet or TV bill
+					li
+						a(href="#") Problem with an app, software or download
 
-				.beta-index-page__box.col-md-12.col-sm-12 
-					.beta-index-page__section.col-sm-12
-						h2 Holiday cancellations and compensation                
-						ul.li--no-style
-							li
-								a(href="#") Claim compensation if your flight's delayed or cancelled
-							li
-								a(href="#") Cancelling a holiday
-							li
-								a(href="#") Claim compensation for a holiday
+			.beta-index-page__box
+				h2 Getting home improvements done
+				ul.li--no-style
+					li
+						a(href="#") Before you get building work done
+					li
+						a(href="#") Problem with building work, decorating or home improvements
 
-				.beta-index-page__box.col-md-12.col-sm-12 
-					.beta-index-page__section.col-sm-12
-						h2 Get more help                
-						ul.li--no-style
-							li
-								a(href="#") Contact the consumer helpline
-							li
-								a(href="#") Template letters
-			.span4
-				.cards
-					.card-text(style="background-color:#FFEBC6;")
-						h3 Consumer helpline
-						p Contact the Citizens Advice consumer helpline on #[strong 03454 04 05 06] if you need help - a trained adviser can give you advice over the phone.
+			.beta-index-page__box
+				h2 Holiday cancellations and compensation
+				ul.li--no-style
+					li
+						a(href="#") Claim compensation if your flight's delayed or cancelled
+					li
+						a(href="#") Cancelling a holiday
+					li
+						a(href="#") Claim compensation for a holiday
+
+			.beta-index-page__box
+				h2 Get more help
+				ul.li--no-style
+					li
+						a(href="#") Contact the consumer helpline
+					li
+						a(href="#") Template letters
+
 				//.cards
 					.card-banner-top(style="color:#fff; background-color:#004b88;")
 						p Header
