--- a/libs/modules/content-index.less
+++ b/libs/modules/content-index.less
@@ -10,13 +10,14 @@
 }
 
 .beta-index-page__box {
-    border-bottom: 1px solid @gray-7;
-    margin-bottom: @box-spacing;
-    float: left;
-
-    &:last-child {
-        margin-bottom: @box-spacing*2;
+    border-top: 1px solid @gray-7;
+    margin-top: @box-spacing*2;
+    padding-top: @box-spacing*2;
+    width: 100%;
+    h2 {
+        margin-top: 0;
     }
+
 }
 
 .content__header {
