Included more information on how not to use the extended colour palette

--- a/libs/jade/colours.jade
+++ b/libs/jade/colours.jade
@@ -95,7 +95,7 @@ block content
 			.row
 				.span12
 					h3 Extended palette
-					p Colours for extending the brand colours into content to make actionable indication.
+					p Colours to extend the brand into actionable items. These colours shouldn't be used as brand or decorative colours, but purely for system and functional colours. A good example of their use is in form error handling.
 			.row
 				.span4.swatch.swatch--beta--red
 					p Red
@@ -137,7 +137,7 @@ block content
 			.row
 				.span12
 					h3 Extended palette tints
-					p There are also variations of some of these swatches in lighter tints.
+					p Tint variations of the extended colour palette.
 			.row
 				.span4.swatch.swatch--beta--red-light
 					p Red Light
@@ -205,7 +205,7 @@ block content
 			.row
 				.span12
 					h3 Monochrome palette
-					p Range for text primarily but also for neutral colouring.
+					p Range for text primarily, but also for neutral colouring.
 			.row
 				.span4.swatch.swatch--mono--gray0
 					p Gray 0
