Updated hex values for responsible-aqua, inventive-pink and generous-mauve based on brand guidelines

--- a/libs/base/colors.less
+++ b/libs/base/colors.less
@@ -41,11 +41,11 @@
 @heritage-yellow-lighter:   lighten(@heritage-yellow, 18%);
 @heritage-yellow-darker:    darken(@heritage-yellow, 10%);
 @responsible-purple:    	#57486B;
-@responsible-aqua:      	#90CE9C;
+@responsible-aqua:      	#A6D6AE;
 @inventive-teal:        	#006278;
-@inventive-pink:        	#FBC0AD;
+@inventive-pink:        	#FCCEBA;
 @generous-green:        	#00553F;
-@generous-mauve:        	#B5AFD7;
+@generous-mauve:        	#C2BDDE;
 
 // Beta colours
 @red:              			#DF3034;
