Changed the row class to .newrow to avoid conflicts with the existing grid

--- a/libs/base/simplegrid.less
+++ b/libs/base/simplegrid.less
@@ -3,7 +3,7 @@
 
 // Variables for creating classes
 @columns:           12;
-@rowclass:          row; // Sets the class used for rows
+@rowclass:          newrow; // Sets the class used for rows
 @colclass:          span; // Sets the class used for columns
 @small:             568px;
 @medium:            768px;
